--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,5 @@
 flask==2.2.3
 flask_cors
-pandas==1.5.3
-xmltodict
 pymongo
 flask-crontab
 openpyxl
@@ -10,5 +8,5 @@ flask-restplus
 Flask-JWT-Extended
 opencv-python
 keras
-tensorflow==1.15.0
+tensorflow>=1.15.0
 pytesseract
